Added view logic for affiche

--- a/app/src/main/res/layout/fragment_affiche.xml
+++ b/app/src/main/res/layout/fragment_affiche.xml
@@ -7,26 +7,23 @@
     android:orientation="vertical"
     tools:context="scientists.house.affiche.app.screens.main.tabs.affiche.AfficheFragment">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:id="@+id/faClContent"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/faMtvTitle"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/faRvAffichePosts"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:text="Affiche fragment"
-            android:textSize="30sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_height="wrap_content"
+            android:clipToPadding="false"
+            android:overScrollMode="never"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:spanCount="2"
+            tools:listitem="@layout/item_affiche_post"/>
 
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 
     <include
         android:id="@+id/faILoading"
