--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -10,14 +10,8 @@
         <item name="colorSecondaryVariant">@color/teal_200</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" >?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
-        <item name="textInputStyle">@style/GlobalTextInputStyle</item>
-        <item name="materialButtonStyle">@style/GlobalButtonStyle</item>
-    </style>
-
-    <style name="BaseTextHint">
-        <item name="android:textColor">@color/white</item>
     </style>
 
 </resources>
