--- a/app/src/main/res/layout/fragment_affiche_post_details.xml
+++ b/app/src/main/res/layout/fragment_affiche_post_details.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
+    android:layout_marginHorizontal="16dp"
     android:orientation="vertical"
     tools:context=".screens.main.tabs.affiche.AffichePostDetailsFragment">
 
@@ -14,93 +15,105 @@
         android:layout_height="wrap_content"
         tools:title="Заголовок афишы" />-->
 
-    <LinearLayout
-        android:id="@+id/fapdLlContent"
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/fapdMtvTitle"
-            style="@style/TextAppearance.AppCompat.Body2"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/fapdLlContent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            tools:text="StundUp" />
+            android:gravity="center"
+            android:orientation="vertical">
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/fapdMtvDate"
-            style="@style/TextAppearance.AppCompat.Body2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            tools:text="26 Ноября, суббота" />
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/fapdMtvTitle"
+                style="@style/TextAppearance.AppCompat.Body2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                tools:text="StundUp" />
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/fapdMtvAge"
-            style="@style/TextAppearance.AppCompat.Body2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            tools:text="18+" />
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/fapdMtvDate"
+                style="@style/TextAppearance.AppCompat.Body2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                tools:text="26 Ноября, суббота" />
 
-        <ImageView
-            android:id="@+id/fapdIvPost"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            tools:srcCompat="@tools:sample/avatars" />
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/fapdMtvAge"
+                style="@style/TextAppearance.AppCompat.Body2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                tools:text="18+" />
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/fapdMtvPlace"
-            style="@style/TextAppearance.AppCompat.Body2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            tools:text="Большой зал" />
+            <ImageView
+                android:id="@+id/fapdIvPost"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                tools:srcCompat="@tools:sample/avatars" />
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/fapdMtvTime"
-            style="@style/TextAppearance.AppCompat.Body2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            tools:text="19:00" />
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/fapdMtvPlace"
+                style="@style/TextAppearance.AppCompat.Body2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                tools:text="Большой зал" />
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/fapdMtvPrice"
-            style="@style/TextAppearance.AppCompat.Body2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            tools:text="от 1000 руб." />
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/fapdMtvTime"
+                style="@style/TextAppearance.AppCompat.Body2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                tools:text="19:00" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/fapdMbBuy"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="@string/affiche_post_details_buy" />
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/fapdMtvPrice"
+                style="@style/TextAppearance.AppCompat.Body2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                tools:text="от 1000 руб." />
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/fapdMtvAbout"
-            style="@style/TextAppearance.AppCompat.Body2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            tools:text="информация о событии" />
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/fapdMbBuy"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="@string/affiche_post_details_buy" />
 
-    </LinearLayout>
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/fapdMtvAbout"
+                style="@style/TextAppearance.AppCompat.Body2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                tools:text="информация о событии" />
+
+        </LinearLayout>
+
+    </androidx.core.widget.NestedScrollView>
 
     <include
         android:id="@+id/fapdILoading"
         layout="@layout/view_loading"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
         android:visibility="gone" />
 
     <include
         android:id="@+id/fapdIError"
         layout="@layout/view_error"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
         android:visibility="gone" />
 
 </LinearLayout>
