affiches are done

--- a/app/src/main/res/drawable/splash.xml
+++ b/app/src/main/res/drawable/splash.xml
@@ -3,8 +3,8 @@
     <item>
         <shape android:shape="rectangle">
             <gradient
-                android:startColor="#6789ab"
-                android:endColor="#0000ff"
+                android:startColor="#391010"
+                android:endColor="@color/red_700"
                 android:angle="45"/>
         </shape>
     </item>
