--- a/app/src/main/res/layout/item_affiche_post.xml
+++ b/app/src/main/res/layout/item_affiche_post.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="16dp"
     android:layout_marginHorizontal="32dp"
-    android:layout_marginBottom="32dp">
+    android:layout_marginBottom="16dp">
 
     <ImageView
         android:id="@+id/iapfIvPost"
@@ -21,6 +22,9 @@
         style="@style/TextAppearance.MaterialComponents.Body2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textSize="17sp"
+        android:textStyle="bold"
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="@id/iapfIvPost"
         app:layout_constraintStart_toStartOf="@id/iapfIvPost"
@@ -33,6 +37,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:gravity="center"
+        android:textColor="@color/grey"
         app:layout_constraintEnd_toEndOf="@id/iapfIvPost"
         app:layout_constraintStart_toStartOf="@id/iapfIvPost"
         app:layout_constraintTop_toBottomOf="@id/iapMtvTitle"
