splash screen is done

--- a/app/src/main/res/drawable/splash.xml
+++ b/app/src/main/res/drawable/splash.xml
@@ -8,4 +8,11 @@
                 android:angle="45"/>
         </shape>
     </item>
+
+    <item>
+        <bitmap
+            android:src="@drawable/icon_big"
+            android:gravity="center"/>
+    </item>
+
 </layer-list>
