tabs are remade

--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -11,6 +11,6 @@
         android:textSize="30sp"
         android:layout_gravity="center"
         android:gravity="center"
-        android:text="News fragment" />
+        android:text="В разработке" />
 
 </FrameLayout>
