--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,8 +3,8 @@
     <color name="red_200">#FC8686</color>
     <color name="red_500">#B10000</color>
     <color name="red_700">#780000</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="teal_200">#016195</color>
+    <color name="teal_700">#044161</color>
     <color name="black">#FF000000</color>
     <color name="grey">#404040</color>
     <color name="light_grey">#5E5E5E</color>
