--- a/app/src/main/res/layout/fragment_affiche_post_details.xml
+++ b/app/src/main/res/layout/fragment_affiche_post_details.xml
@@ -33,7 +33,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="start"
                 android:layout_marginTop="16dp"
-                android:textSize="32sp"
+                android:textSize="28sp"
                 android:textStyle="bold"
                 tools:text="StundUp" />
 
@@ -62,17 +62,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
                 android:baselineAligned="false"
                 android:gravity="center"
                 android:orientation="horizontal"
-                android:weightSum="28">
+                android:weightSum="25">
 
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="10"
                     android:layout_gravity="center|bottom"
+                    android:layout_weight="10"
                     android:orientation="vertical">
 
                     <com.google.android.material.textview.MaterialTextView
@@ -81,28 +80,23 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:layout_margin="8dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginBottom="8dp"
+                        android:textAlignment="center"
                         android:textSize="17sp"
                         android:textStyle="bold"
                         tools:text="Большой зал" />
 
-                    <com.google.android.material.textview.MaterialTextView
-                        android:id="@+id/aboutPlace"
-                        style="@style/TextAppearance.AppCompat.Body2"
-                        android:layout_width="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/grey"
-                        android:textSize="13sp"
-                        tools:text="Место проведения" />
 
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="8"
                     android:layout_gravity="center|bottom"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_weight="5"
                     android:orientation="vertical">
 
                     <com.google.android.material.textview.MaterialTextView
@@ -111,10 +105,78 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:layout_margin="8dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginBottom="8dp"
+                        android:textAlignment="center"
                         android:textSize="17sp"
                         android:textStyle="bold"
                         tools:text="19:00" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center|bottom"
+                    android:layout_weight="10"
+                    android:orientation="vertical">
+
+                    <com.google.android.material.textview.MaterialTextView
+                        android:id="@+id/fapdMtvPrice"
+                        style="@style/TextAppearance.AppCompat.Body2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginBottom="8dp"
+                        android:textAlignment="center"
+                        android:textSize="17sp"
+                        android:textStyle="bold"
+                        tools:text="от 1000 руб." />
+
+                </LinearLayout>
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="28dp"
+                android:layout_marginBottom="16dp"
+                android:baselineAligned="false"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:weightSum="25">
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="10"
+                    android:orientation="vertical">
+
+                    <com.google.android.material.textview.MaterialTextView
+                        android:id="@+id/aboutPlace"
+                        style="@style/TextAppearance.AppCompat.Body2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:textAlignment="center"
+                        android:textColor="@color/grey"
+                        android:textSize="12sp"
+                        tools:text="Место проведения" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_weight="5"
+                    android:orientation="vertical">
+
 
                     <com.google.android.material.textview.MaterialTextView
                         android:id="@+id/aboutTime"
@@ -122,8 +184,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:textAlignment="center"
                         android:textColor="@color/grey"
-                        android:textSize="13sp"
+                        android:textSize="12sp"
                         tools:text="Время" />
 
                 </LinearLayout>
@@ -131,20 +194,10 @@
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:layout_weight="10"
-                    android:layout_gravity="center|bottom"
                     android:orientation="vertical">
 
-                    <com.google.android.material.textview.MaterialTextView
-                        android:id="@+id/fapdMtvPrice"
-                        style="@style/TextAppearance.AppCompat.Body2"
-                        android:layout_width="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="8dp"
-                        android:textSize="17sp"
-                        android:textStyle="bold"
-                        tools:text="от 1000 руб." />
 
                     <com.google.android.material.textview.MaterialTextView
                         android:id="@+id/aboutPrice"
@@ -152,11 +205,13 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:textAlignment="center"
                         android:textColor="@color/grey"
-                        android:textSize="13sp"
+                        android:textSize="12sp"
                         tools:text="Стоимость" />
 
                 </LinearLayout>
+
 
             </LinearLayout>
 
@@ -172,8 +227,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                app:backgroundTint="@color/red_500"
-                android:text="@string/affiche_post_details_buy" />
+                android:text="@string/affiche_post_details_buy"
+                app:backgroundTint="@color/red_500" />
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/aboutText"
