--- a/app/src/main/res/layout/item_affiche_post.xml
+++ b/app/src/main/res/layout/item_affiche_post.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="16dp"
-    android:layout_marginHorizontal="32dp"
+    android:layout_marginHorizontal="16dp"
     android:layout_marginBottom="16dp">
 
     <ImageView
@@ -24,6 +24,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textSize="16sp"
+        android:textAlignment="center"
         android:textStyle="bold"
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="@id/iapfIvPost"
