--- a/app/src/main/res/layout/fragment_affiche_post_details.xml
+++ b/app/src/main/res/layout/fragment_affiche_post_details.xml
@@ -141,7 +141,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="28dp"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
                 android:baselineAligned="false"
                 android:gravity="center"
