--- a/app/src/main/res/layout/fragment_news_post_details.xml
+++ b/app/src/main/res/layout/fragment_news_post_details.xml
@@ -43,7 +43,7 @@
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/fnewsMtvAbout"
-                style="@style/TextAppearance.AppCompat.Body2"
+                style="@style/Text.Normal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="start"
