--- a/app/src/main/res/layout/fragment_post_news.xml
+++ b/app/src/main/res/layout/fragment_post_news.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,67 +7,45 @@
     android:orientation="vertical"
     tools:context="scientists.house.affiche.app.screens.main.tabs.news.NewsFragment">
 
-
-    <LinearLayout
-        android:id="@+id/fnClContent"
-
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/faRvNewsPosts"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:clipToPadding="false"
+        android:overScrollMode="never"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:spanCount="1"
+        tools:listitem="@layout/item_news_post" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/faRvNewsPosts"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:clipToPadding="false"
-            android:overScrollMode="never"
-            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-            app:spanCount="1"
-            tools:listitem="@layout/item_news_post" />
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/fnewsMbPrev"
+        android:layout_width="64dp"
+        android:layout_height="40dp"
+        android:padding="16dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginLeft="16dp"
+        android:background="@drawable/rounded_button"
+        android:drawableLeft="@drawable/ic_baseline_keyboard_arrow_left_24"
+        android:textSize="11sp"
+        app:backgroundTint="@color/light_grey"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="34dp"
-            android:layout_gravity="bottom"
-            android:layout_marginBottom="8dp"
-            android:layout_weight="0"
-            android:baselineAligned="false"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/fnewsMbPrev"
-                android:layout_width="64dp"
-                android:layout_height="32dp"
-                android:layout_marginLeft="16dp"
-                android:background="@drawable/rounded_button"
-                android:drawableLeft="@drawable/ic_baseline_keyboard_arrow_left_24"
-                android:textSize="11sp"
-                app:backgroundTint="@color/light_grey"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
-
-            <Button
-                android:id="@+id/fnewsMbNext"
-                android:layout_width="64dp"
-                android:layout_height="32dp"
-                android:layout_marginRight="16dp"
-
-                android:background="@drawable/rounded_button"
-                android:drawableRight="@drawable/ic_baseline_keyboard_arrow_right_24"
-                app:backgroundTint="@color/light_grey"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </LinearLayout>
-
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/fnewsMbNext"
+        android:layout_width="64dp"
+        android:layout_height="40dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/rounded_button"
+        android:drawableRight="@drawable/ic_baseline_keyboard_arrow_right_24"
+        app:backgroundTint="@color/light_grey"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <include
         android:id="@+id/fnILoading"
@@ -79,4 +57,4 @@
         layout="@layout/view_error"
         android:visibility="gone" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
