--- a/app/src/main/res/layout/item_affiche_post.xml
+++ b/app/src/main/res/layout/item_affiche_post.xml
@@ -2,10 +2,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:clickable="true"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginVertical="16dp"
-    android:layout_marginHorizontal="8dp">
+    android:paddingHorizontal="16dp"
+    android:paddingVertical="8dp"
+    android:background="?attr/selectableItemBackground"
+    android:focusable="true">
 
     <ImageView
         android:id="@+id/iapfIvPost"
